--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -28,7 +28,7 @@
       <mat-card class="mat-elevation-z0">
         <form [formGroup]="loginForm" (ngSubmit)="login(); loginForm.reset()">
           <mat-card-content>
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <input
                 type="text"
                 matInput
@@ -47,7 +47,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <input
                 matInput
                 type="password"
