--- a/src/app/pages/user-create/user-create.component.css
+++ b/src/app/pages/user-create/user-create.component.css
@@ -6,3 +6,80 @@ Last Modified by: Jamal Damir
 Last Modification Date: 04/19/23
 Description: component styling for the bcrs project
 */
+
+.smaller-inputs {
+  display: flex;
+  flex-direction: row;
+  gap: 27%;
+  margin: auto;
+  width: 100%;
+  justify-content: center;
+}
+
+#username-password {
+  margin-top: 20px;
+}
+
+hr {
+  width: 100%;
+}
+
+.mat-card {
+  padding: 0;
+  margin: auto;
+  margin-top: 100px;
+  width: 50%;
+}
+
+.header {
+  padding-top: 5%;
+  background-image: linear-gradient(
+    to bottom,
+    rgb(19, 19, 19),
+    rgb(66, 66, 66)
+  );
+  height: 100px;
+}
+
+form {
+  width: 100%;
+  padding: 0 10%;
+}
+
+.address {
+  width: 100%;
+  margin: auto;
+}
+.mat-card-actions {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 10%;
+}
+
+button {
+  width: 25%;
+ 
+}
+
+@media screen and (max-width: 850px) {
+  .smaller-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 5%;
+    margin: auto;
+    width: 100%;
+    justify-content: center;
+  }
+  .mat-card {
+    width: 70%;
+  }
+
+  .mat-card-action {
+    text-align: center;
+  }
+
+  button {
+    float: none;
+    width: 35%;
+  }
+}
