Added code comments

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -8,6 +8,7 @@ Last Modification Date: 04/18/23
 Description: component styling for the bcrs project
 */
 
+/* Import fonts*/
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Carter+One&family=Kanit:wght@300&display=swap");
 
 
