--- a/src/app/pages/security-question-list/security-question-list.component.html
+++ b/src/app/pages/security-question-list/security-question-list.component.html
@@ -22,7 +22,7 @@
   </div>
   <!-- error message from server -->
   <div>
-    <p-messages [(value)]="serverMessages" [enableService]="false" style="color: #fff;"></p-messages>
+    <p-messages [(value)]="serverMessages" [enableService]="false"></p-messages>
   </div>
 
   <div fxFlex>
