--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -30,7 +30,7 @@
   </div>
 
   <div>
-    <p-messages [(value)]="serverMessages" [enableService]="false" style="color: #fff;"></p-messages>
+    <p-messages [(value)]="serverMessages" [enableService]="false"></p-messages>
   </div>
 
   <!-- Table Data -->
@@ -74,7 +74,7 @@
             </td>
           </tr>
         </ng-template>
-        
+
       </p-table>
     </mat-card>
   </div>
