added register path to the session API

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,7 +12,7 @@
   <mat-card fxFlex class="login-container w-50">
     <mat-card-header class="header">
       <!-- Page Title-->
-      <mat-card-title class="login-title"> Employee Login In </mat-card-title>
+      <mat-card-title class="login-title"> Employee Log In </mat-card-title>
     </mat-card-header>
     <hr />
     <mat-card-content class="login-content">
