--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -46,7 +46,7 @@
             <th>Phone Number</th>
             <th>Email</th>
             <th>Address</th>
-            <th style="width: 8rem"></th>
+            <th style="width: 200px;"></th>
           </tr>
         </ng-template>
 
@@ -58,7 +58,7 @@
             <td data-cell="phone number">{{ user.phoneNumber }}</td>
             <td data-cell="email">{{ user.email }}</td>
             <td data-cell="address">{{ user.address }}</td>
-            <td style="text-align: center">
+            <td class="api-buttons">
               <button
                 mat-button
                 type="button"
