--- a/src/app/pages/user-create/user-create.component.html
+++ b/src/app/pages/user-create/user-create.component.html
@@ -27,6 +27,7 @@
       [formGroup]="form"
       (ngSubmit)="createUser()"
       (keydown.enter)="$event.preventDefault()"
+      autocomplete="off"
     >
       <mat-card-content>
         <div fxLayout="column" fxLayoutGap="10px">
@@ -172,7 +173,6 @@
                 matInput
                 formControlName="userName"
                 required
-                autocomplete="off"
               />
               <!-- Error handling -->
               <mat-error
@@ -192,7 +192,7 @@
                 matInput
                 formControlName="password"
                 required
-                autocomplete="off"
+                autocomplete="new-password"
               />
               <!-- Error handling -->
               <mat-error
