--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -68,11 +68,11 @@
             </button>
           </mat-menu>-->
 
-          <!-- User Profile --><!--
+          <!-- User Profile -->
           <button mat-menu-item routerLink="profile" class="">
             <mat-icon>person</mat-icon>
             Edit Profile
-          </button>-->
+          </button>
 
           <!-- Logout -->
           <button mat-menu-item (click)="logout()">
