--- a/src/app/pages/user-create/user-create.component.html
+++ b/src/app/pages/user-create/user-create.component.html
@@ -8,32 +8,34 @@
 -->
 
 <div fxLayout="column">
-  <mat-card class="mat-elevation-z0">
-    <div class="header">
-      <mat-card-title style="text-align: center">
-        Create User Form
-      </mat-card-title>
 
-      <mat-card-subtitle style="text-align: center"
-        >Field marked with an asterisk (*) are required.</mat-card-subtitle
-      >
-    </div>
+  <div fxFlex>
+    <h1 class="page-header">
+      Create User Form!<br />
+      <span class="subtitle">
+        Fields marked with an asterisk (*) are required.
+      </span>
+    </h1>
+  </div>
 
-    <br />
     <!-- Displaying success and error messages -->
     <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
+
+  <mat-card class="mat-elevation-z0">
+
     <!-- User creation form-->
     <form
       [formGroup]="form"
       (ngSubmit)="createUser()"
       (keydown.enter)="$event.preventDefault()"
       autocomplete="off"
+      class="form-style"
     >
       <mat-card-content>
         <div fxLayout="column" fxLayoutGap="10px">
-          <div class="smaller-inputs">
+
             <!-- First Name -->
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="fill">
               <mat-label>First name</mat-label>
               <input
                 type="text"
@@ -65,7 +67,7 @@
               >
             </mat-form-field>
             <!-- Last Name -->
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="fill">
               <mat-label>Last name</mat-label>
               <input type="text" matInput formControlName="lastName" required />
               <!-- Error handling -->
@@ -91,11 +93,9 @@
                 >Last Name must be less than 35 characters.</mat-error
               >
             </mat-form-field>
-          </div>
 
-          <div class="smaller-inputs">
             <!-- Phone Number -->
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="fill">
               <mat-label>Phone Number</mat-label>
               <input
                 type="text"
@@ -120,7 +120,7 @@
               >
             </mat-form-field>
             <!-- Email Address -->
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="fill">
               <mat-label>Email address</mat-label>
               <input type="text" matInput formControlName="email" required />
               <!-- Error handling -->
@@ -139,11 +139,10 @@
                 >Invalid email format.</mat-error
               >
             </mat-form-field>
-          </div>
 
           <!-- Address -->
 
-          <mat-form-field class="address" appearance="outline">
+          <mat-form-field class="address" appearance="fill">
             <mat-label>Address</mat-label>
 
             <input
@@ -163,10 +162,8 @@
             >
           </mat-form-field>
 
-          <hr />
-          <div class="smaller-inputs" id="username-password">
             <!-- Username -->
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="fill">
               <mat-label>Username</mat-label>
               <input
                 type="text"
@@ -185,7 +182,7 @@
             </mat-form-field>
 
             <!-- Password -->
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="fill">
               <mat-label>Password</mat-label>
               <input
                 type="password"
@@ -211,19 +208,19 @@
                 one number.</mat-error
               >
             </mat-form-field>
-          </div>
+
         </div>
       </mat-card-content>
       <!-- Form submission and cancel buttons-->
-      <mat-card-actions>
-        <div class="w-100">
-          <button mat-raised-button (click)="cancel()" class="cancel">
+      <mat-card-actions align="end">
+
+          <button mat-raised-button (click)="cancel()" class="cancel form-button">
             Cancel
           </button>
-          <button mat-raised-button [disabled]="!form.valid" class="primary-color">
+          <button mat-raised-button [disabled]="!form.valid" class="primary-color form-button">
             Submit
           </button>
-      </div>
+
       </mat-card-actions>
     </form>
   </mat-card>
