--- a/src/app/shared/forms/forgot-password/forgot-password.component.html
+++ b/src/app/shared/forms/forgot-password/forgot-password.component.html
@@ -27,7 +27,7 @@
 
       <br /><br />
 
-      <p-messsages [{value}]="errorMessages" [enableService]="false"></p-messsages>
+      <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
 
       <form [formGroup]="form" (ngSubmit)="verifyUser()" #usernameForm>
         <mat-card-content fxLayout="column">
