--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -65,7 +65,7 @@
           <!-- Account creations and password reset anchors-->
           <div class="create-account">
             <a routerLink="/session/forgot-password">Forgot Password?</a>
-            <a class="">Create Account</a>
+            <a routerLink="/session/register" class="">Create Account</a>
           </div>
         </form>
       </mat-card>
