--- a/src/app/shared/forms/forgot-password/forgot-password.component.html
+++ b/src/app/shared/forms/forgot-password/forgot-password.component.html
@@ -45,8 +45,8 @@
           <br /><br />
 
           <div fxFlex fxLayoutAlign="end" class="p5">
-            <button mat-raised-button routerLink="/session/login">Cancel</button> &nbsp;&nbsp;
-            <button mat-raised-button [disabled]="!form.valid">Forgot Password</button>
+            <button mat-raised-button routerLink="/session/login" class="cancel form-button">Cancel</button> &nbsp;&nbsp;
+            <button mat-raised-button [disabled]="!form.valid" class="primary-color form-button">Forgot Password</button>
           </div>
         </mat-card-content>
       </form>
