--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -22,7 +22,7 @@
 
 <br><br><br>
 
-<div fxLayout="column">
+<div fxLayout="column" >
   <br><br>
   <mat-card fxFlex class="card-container mat-elevation-z4">
     <mat-card-title>
@@ -48,12 +48,37 @@
             <br>
 
             <mat-list>
+
+              <!-- firstName & lastName -->
               <mat-list-item>
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>First Name</mat-label>
                   <input matInput required formControlName="firstName">
                   <mat-error class="error" *ngIf="contactForm.controls['firstName'].hasError('required') && contactForm.controls['firstName'].touched">
                     First name is a required field.
+                  </mat-error>
+                </mat-form-field>
+
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+                <mat-form-field fxFlex appearance="fill">
+                  <mat-label>Last Name</mat-label>
+                  <input matInput required formControlName="lastName">
+                  <mat-error class="error" *ngIf="contactForm.controls['lastName'].hasError('required') && contactForm.controls['lastName'].touched">
+                    Last name is a required field.
+                  </mat-error>
+                </mat-form-field>
+              </mat-list-item>
+
+              <br><br>
+
+              <!-- phoneNumber & email -->
+              <mat-list-item>
+                <mat-form-field fxFlex appearance="fill">
+                  <mat-label>Phone Number</mat-label>
+                  <input matInput required formControlName="phoneNumber">
+                  <mat-error class="error" *ngIf="contactForm.controls['phoneNumber'].hasError('required') && contactForm.controls['phoneNumber'].touched">
+                    Phone number is a required field.
                   </mat-error>
                 </mat-form-field>
 
@@ -71,8 +96,7 @@
                 </mat-form-field>
               </mat-list-item>
 
-              <br><br>
-
+              <!-- Address -->
               <mat-list-item>
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Address</mat-label>
@@ -107,11 +131,11 @@
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Security Question</mat-label>
                   <mat-select required formControlName="securityQuestion1">
-                    <!-- <mat-option *ngIf="let question of securityQuestions" [value]="question.text">
+                    <mat-option *ngFor="let question of securityQuestions" [value]="question.text">
                       {{ question.text }}
-                    </mat-option> -->
+                    </mat-option>
                   </mat-select>
-                  <mat-error class="error" *ngIf="sqForm.controls['securityQuestion1'].hasError('required') && contactForm.controls['securityQuestion1'].touched">
+                  <mat-error class="error" *ngIf="sqForm.controls['securityQuestion1'].hasError('required') && sqForm.controls['securityQuestion1'].touched">
                     Required field.
                   </mat-error>
                 </mat-form-field>
@@ -121,9 +145,9 @@
                 <!-- Security Anwser #1 -->
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Answer</mat-label>
-                  <input required matInput fromControlName="answerToSecurityQuestion1">
+                  <input required matInput formControlName="answerToSecurityQuestion1">
 
-                  <mat-error class="error" *ngIf="sqForm.controls['answerToSecurityQuestion1'].hasError('required') && contactForm.controls['answerToSecurityQuestion1'].touched">
+                  <mat-error class="error" *ngIf="sqForm.controls['answerToSecurityQuestion1'].hasError('required') && sqForm.controls['answerToSecurityQuestion1'].touched">
                     Required field.
                   </mat-error>
                 </mat-form-field>
@@ -136,11 +160,11 @@
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Security Question</mat-label>
                   <mat-select required formControlName="securityQuestion2">
-                    <!-- <mat-option *ngIf="let question of securityQuestions" [value]="question.text">
+                    <mat-option *ngFor="let question of securityQuestions" [value]="question.text">
                       {{ question.text }}
-                    </mat-option> -->
+                    </mat-option>
                   </mat-select>
-                  <mat-error class="error" *ngIf="sqForm.controls['securityQuestion2'].hasError('required') && contactForm.controls['securityQuestion2'].touched">
+                  <mat-error class="error" *ngIf="sqForm.controls['securityQuestion2'].hasError('required') && sqForm.controls['securityQuestion2'].touched">
                     Required field.
                   </mat-error>
                 </mat-form-field>
@@ -150,9 +174,9 @@
                 <!-- Security Anwser #2 -->
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Answer</mat-label>
-                  <input required matInput fromControlName="answerToSecurityQuestion2">
+                  <input required matInput formControlName="answerToSecurityQuestion2">
 
-                  <mat-error class="error" *ngIf="sqForm.controls['answerToSecurityQuestion2'].hasError('required') && contactForm.controls['answerToSecurityQuestion2'].touched">
+                  <mat-error class="error" *ngIf="sqForm.controls['answerToSecurityQuestion2'].hasError('required') && sqForm.controls['answerToSecurityQuestion2'].touched">
                     Required field.
                   </mat-error>
                 </mat-form-field>
@@ -165,11 +189,11 @@
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Security Question</mat-label>
                   <mat-select required formControlName="securityQuestion3">
-                    <!-- <mat-option *ngIf="let question of securityQuestions" [value]="question.text">
+                    <mat-option *ngFor="let question of securityQuestions" [value]="question.text">
                       {{ question.text }}
-                    </mat-option> -->
+                    </mat-option>
                   </mat-select>
-                  <mat-error class="error" *ngIf="sqForm.controls['securityQuestion3'].hasError('required') && contactForm.controls['securityQuestion3'].touched">
+                  <mat-error class="error" *ngIf="sqForm.controls['securityQuestion3'].hasError('required') && sqForm.controls['securityQuestion3'].touched">
                     Required field.
                   </mat-error>
                 </mat-form-field>
@@ -179,9 +203,9 @@
                 <!-- Security Anwser #3 -->
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Answer</mat-label>
-                  <input required matInput fromControlName="answerToSecurityQuestion3">
+                  <input required matInput formControlName="answerToSecurityQuestion3">
 
-                  <mat-error class="error" *ngIf="sqForm.controls['answerToSecurityQuestion3'].hasError('required') && contactForm.controls['answerToSecurityQuestion3'].touched">
+                  <mat-error class="error" *ngIf="sqForm.controls['answerToSecurityQuestion3'].hasError('required') && sqForm.controls['answerToSecurityQuestion3'].touched">
                     Required field.
                   </mat-error>
                 </mat-form-field>
@@ -216,7 +240,7 @@
                     <mat-label>Username</mat-label>
                     <input required matInput type="userName" formControlName="userName">
 
-                    <mat-error class="error" *ngIf="sqForm.controls['userName'].hasError('required') && contactForm.controls['userName'].touched">
+                    <mat-error class="error" *ngIf="credForm.controls['userName'].hasError('required') && credForm.controls['userName'].touched">
                       Username is a required field.
                     </mat-error>
 
@@ -229,11 +253,11 @@
                     <mat-label>Password</mat-label>
                     <input required matInput type="password" formControlName="password">
 
-                    <mat-error class="error" *ngIf="sqForm.controls['password'].hasError('required') && contactForm.controls['password'].touched">
+                    <mat-error class="error" *ngIf="credForm.controls['password'].hasError('required') && credForm.controls['password'].touched">
                       Password is a required field.
                     </mat-error>
 
-                    <mat-error class="error" *ngIf="sqForm.controls['password'].hasError('pattern') && contactForm.controls['password'].touched">
+                    <mat-error class="error" *ngIf="credForm.controls['password'].hasError('pattern') && credForm.controls['password'].touched">
                       Password must be at least 8 characters, contain one letter, and one number.
                     </mat-error>
 
