fixed functionality for register component

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -270,7 +270,7 @@
 
               <div fxLayoutAlign="end">
                 <button mat-raised-button color="accent" matStepperPrevious>Back</button> &nbsp;&nbsp;
-                <button mat-raised-button color="primary" [disabled]="!credForm.valid" (click)="register">Register</button>
+                <button mat-raised-button color="primary" [disabled]="!credForm.valid" (click)="register()">Register</button>
               </div>
             </div>
           </form>
